--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>photoshop slutprojekt</title>
-</head>
-	<img src="indexBild.jpg" width = "80%">
-    <img src="TillbehorBild.jpg" width = "80%">
-    
-    
+</head>   
 
 <body>
+	<img src="indexBild.jpg" width = "800px" alt="index">
+    <img src="TillbehorBild.jpg" width = "800px" alt="tillbehör">
 </body>
 </html>
