--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>   
 
 <body>
-	<img src="indexBild.jpg" width = "800" alt="index">
-    <img src="TillbehorBild.jpg" width = "800" alt="tillbehör">
+	<img src="indexBild.jpg"  alt="index">
+    <img src="TillbehorBild.jpg"  alt="tillbehör">
 </body>
 </html>
